--- a/app/views/mobile app stock requisition/view more.html
+++ b/app/views/mobile app stock requisition/view more.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/move-header2.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/move.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/tables.css">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
     </div>
 
     <div class="dropdown text-center blue">
-      <button class="btn btn-default request-new dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Filter By 
+      <button class="btn btn-default request-new dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Filter By
         <span class="caret"></span>
       </button>
         <ul class="dropdown-menu" role="menu">
@@ -68,77 +68,88 @@
         </ul>
     </div>
 
+    <!--Products Requested-->
     <div class="container">
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th class="dark-grey">PRODUCT </th>
-                        <th class="dark-grey text-right">COST (N)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="category-row cat1">
-                        <td class="product-column">
-                            <p class="dark-grey"><strong>2 Units</strong></p>
-                            <p>Product Name</p>
-                        </td>
-                        <td class="product-column text-right">
-                            <p>3,700 </p>
-                        </td>
-                    </tr>
-                    <tr class="category-row cat1">
-                        <td class="product-column">
-                            <p class="dark-grey"><strong>5 Vials</strong></p>
-                            <p>Product Name</p>
-                        </td>
-                        <td class="product-column text-right">
-                            <p>450,000 </p>
-                        </td>
-                    </tr>
-                    <tr class="category-row cat2">
-                        <td class="product-column">
-                            <p class="dark-grey"><strong>10 Units</strong></p>
-                            <p>Long Product Name That Goes on Forever</p>
-                        </td>
-                        <td class="product-column text-right">
-                            <p>450,000 </p>
-                        </td>
-                    </tr>
-                    <tr class="category-row">
-                        <td class="product-column">
-                            <p><strong>TOTAL </strong></p>
-                        </td>
-                        <td class="product-column text-right">
-                            <p><strong>453,700 </strong></p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th class="dark-grey">PRODUCT </th>
+              <th class="dark-grey text-right">COST(N)</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr class="category-row cat1">
+              <td class="product-column">
+                <p class="dark-grey"><strong>2 Units</strong></p>
+                <p>Product Name</p>
+              </td>
+              <td class="product-column text-right">
+                <p>3,700 </p>
+              </td>
+            </tr>
+
+            <tr class="category-row cat1">
+              <td class="product-column">
+                <p class="dark-grey"><strong>5 Vials</strong></p>
+                <p>Product Name</p>
+              </td>
+              <td class="product-column text-right">
+                <p>450,000 </p>
+              </td>
+            </tr>
+
+            <tr class="category-row cat2">
+              <td class="product-column">
+                <p class="dark-grey"><strong>10 Units</strong></p>
+                <p>Long Product Name That Goes on Forever</p>
+              </td>
+              <td class="product-column text-right">
+                <p>450,000 </p>
+              </td>
+            </tr>
+
+            <tr class="category-row">
+              <td class="product-column">
+                <p><strong>TOTAL </strong></p>
+              </td>
+              <td class="product-column text-right">
+                <p><strong>903,700 </strong></p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+
+    <!--Restock Alert Requests-->
     <div class="container">
-        <h5 class="text-uppercase dark-grey">restock alert requests</h5>
-        <div class="table-responsive">
-            <table class="table">
-                <thead>
-                    <tr></tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Product Name</td>
-                        <td class="text-right green"><strong>ALERT SENT </strong></td>
-                    </tr>
-                    <tr>
-                        <td>Longer Product Name</td>
-                        <td class="text-right orange"><strong>ALERT PENDING </strong></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+      <h5 class="text-uppercase dark-grey">restock alert requests</h5>
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr></tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Product Name</td>
+              <td class="text-right green"><strong>ALERT SENT </strong></td>
+            </tr>
+
+            <tr>
+              <td>Longer Product Name</td>
+              <td class="text-right orange"><strong>ALERT PENDING </strong></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
