Fixes; Invoice Page
Improved the product request pages; added a page to view all invoices.

--- a/app/views/mobile app stock requisition/all invoices.html
+++ b/app/views/mobile app stock requisition/all invoices.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+<!-- Header -->
   <div class="container header bottom-aligner">
     <div class="row">
       <div class="col-xs-6">
@@ -27,10 +29,12 @@
     </div>
   </div>
 
+<!-- Subheader -->
+
   <div class="container">
     <div class="row">
       <div class="col-xs-8">
-        <h5 class="">Stock Requisition</h5>
+        <h5 class="">Invoices</h5>
       </div>
       <div class="col-xs-4">
         <h6 class="text-uppercase dark-grey text-right">
@@ -40,20 +44,20 @@
       </div>
     </div>
   </div>
-
-  <div class="container">
+<div class="push"></div>
+  <!-- <div class="container">
     <a href="/new stock request" class="btn btn-default request-new">
       <i class="fa fa-plus icon"></i>Request New Stock
     </a>
-  </div>
+  </div> -->
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h5 class="text-center">Previous Stock Requisitions</h5>
+        <h5 class="">Previous Invoices</h5>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="container">
     <div class="table-responsive">
@@ -61,7 +65,7 @@
         <thead>
         <tr>
           <th class="dark-grey">DATE</th>
-          <th class="dark-grey text-center">DELIVERED? </th>
+          <th class="dark-grey text-center">PAID? </th>
           <th> </th>
         </tr>
         </thead>
