--- a/app/views/mobile app stock requisition/preview list.html
+++ b/app/views/mobile app stock requisition/preview list.html
@@ -16,36 +16,27 @@
 <body>
 
   <!--Header-->
-
     <div class="container header bottom-aligner">
-      <div class="row">
       <div class="col-xs-6">
-        <img src = "assets/img/logo-Stock-1.jpg" width = "100%">
+        <h6 class="text-uppercase dark-grey"><i class="fa fa-chevron-left icon"></i>back</h6>
       </div>
 
       <div class="col-xs-6 text-right">
-        <h6 class="text-uppercase green"><i class="fa fa-check icon"></i><strong>online </strong></h6>
+        <h6 class="text-uppercase green"><i class="fa fa-check icon"></i><strong> online </strong></h6>
       </div>
-    </div>
-    </div>
-
-    <div class="container">
-      <p class="text-uppercase blue backButton">
-        <i class="fa fa-chevron-left icon left"></i>back
-      </p>
     </div>
 
     <!--SubHeader-->
-    <div class="container">
-      <div class="row">
-      <div class="col-xs-8">
-        <h4 class="">Requisition List Preview</h4>
+      <div class="container">
+        <div class="col-xs-8">
+          <h5 class="">Requisition List Preview</h5>
+          <p class = "dark-grey"> 28 May 2016 </p>
+        </div>
+        <div class="col-xs-4 text-right">
+          <h6 class="text-uppercase dark-grey"><i class="fa fa-question-circle icon"></i><strong>help </strong></h6>
+          <!-- <i class="fa fa-search dark-grey fa-border"></i> -->
+        </div>
       </div>
-      <div class="col-xs-4 text-right">
-        <h6 class="text-uppercase blue"><i class="fa fa-question-circle icon"></i><strong>help </strong></h6>
-      </div>
-    </div>
-    </div>
 
     <div class="container status">
       <em class="dark-grey">Please ensure the items on this list are the ones you want</em>
@@ -124,9 +115,17 @@
   <!--Footer-->
   <footer class="footer">
     <div class="container footer-container text-center">
-      <button class="btn btn-default btn-blue" type="button"><strong>SEND </strong></button>
+      <button class="btn btn-blue" type="button"><strong>SEND </strong></button>
     </div>
   </footer>
+
+  <!-- Footer -->
+  <div class="push"></div>
+  <div class="footer">
+    <div class="col-md-4 text-center">
+      <button class="btn btn-blue" type="button">SEND REQUEST</button>
+    </div>
+  </div>
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
