--- a/app/views/mobile app stock requisition/assets/css/move.css
+++ b/app/views/mobile app stock requisition/assets/css/move.css
@@ -1,6 +1,11 @@
 body{
   font-family:'Roboto', sans-serif;
   color:#333;
+  height: 100%;
+}
+
+p {
+  font-size: 12px;
 }
 
 .header{
@@ -10,6 +15,12 @@ body{
   border-bottom: 1px solid whitesmoke;
   background-color:white;
   display: block;
+}
+
+.h6-subheader {
+  margin-top: 5px;
+  margin-bottom: 0px;
+  font-size: 12px;
 }
 
 .icon{
@@ -124,7 +135,7 @@ table{
   padding:10px;
   padding-top:10px;
   padding-bottom:0px;
-  background-color:#F5F8FA;
+  background-color:#fefefe;
 }
 
 .cat1{
@@ -143,9 +154,10 @@ div.cat1.accordion{
   background-color:#1055b4;
   color:white;
   border: none;
-  min-height: 50px;
+  min-height: 20px;
   height:auto;
   padding: 12.5px;
+  margin-bottom: 10px;
 }
 
 .cat1.heading{
@@ -167,8 +179,9 @@ div.cat2.accordion{
   background-color:#ff9f00;
   color:white;
   border: none;
-  min-height: 50px;
+  min-height: 20px;
   padding: 12.5px;
+  margin-bottom: 10px;
 }
 
 .cat2.heading{
@@ -190,8 +203,9 @@ div.cat3.accordion{
   background-color:#E20073;
   color:white;
   border: none;
-  min-height: 50px;
+  min-height: 20px;
   padding: 12.5px;
+  margin-bottom: 10px;
 }
 
 .cat3.heading{
@@ -228,6 +242,7 @@ td.product-column.text-right{
   padding-bottom:10px;
   margin-left: 0;
   margin-right: 0;
+  margin-bottom: 10px;
   font-size: 12px;
 }
 
@@ -271,23 +286,41 @@ div.category-color{
   width:50%;
 }
 
+.btn-red{
+  background-color:#F56044;
+  color:white;
+  padding-left:20px;
+  padding-right:20px;
+  width: 100%;
+}
+
 .middle-align{
   vertical-align:middle;
 }
 
-.footer{
-  position: sticky;
-  margin-top:80px;
-  bottom:0;
-  width:100%;
-  height:60px;
-  background-color:#f5f5f5;
+.push {
+  height: 60px;
 }
 
-.footer-container{
-  width:auto;
-  max-width:680px;
-  padding:15px;
+.footer {
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:60px;
+   width:100%;
+   padding-top: 15px;
+   padding-bottom: 15px;
+   background:#f5f5f5;
+}
+
+.input-group {
+  margin-bottom: 20px;
+}
+
+/* IE 6 */
+* html #footer {
+   position:absolute;
+   top:expression((0-(footer.offsetHeight)+(document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight)+(ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop))+'px');
 }
 
 .lightweight-font{
@@ -299,4 +332,22 @@ div.category-color{
   margin-top:15px;
   margin-bottom:15px;
   background-color:#F5F8FA;
+}
+
+.photo {
+float:left;
+margin-top: 10px;
+margin-bottom: 20px;
+padding-bottom: 10px;
+padding-left: 0px;
+}
+
+.label-list {
+  background-color: #F56044;
+  color: #f5f5f5;
+  position: absolute;
+  top: 50px;
+  left: 200px;
+  border-radius: 10px;
+  z-index: 999;
 }
