--- a/assets/css/move.css
+++ b/assets/css/move.css
@@ -6,10 +6,20 @@
   background-color:transparent;
 }
 
-nav.navbar.navbar-default.move-nav{
+nav.navbar-move{
   background-color:transparent;
   border:0px;
 }
+
+/*@media (max-width: 800px) {
+  button.navbar-toggle {
+    background-color: white;
+  }
+  .navbar-toggle .icon-bar {
+    color: #333333;
+  }
+}*/
+
 
 .herosection{
   padding-left:10px;
@@ -33,7 +43,7 @@ nav.navbar.navbar-default.move-nav{
 
 .brandlogo{
   margin-top:-10px;
-  width:10em;
+  width:15em;
 }
 
 .h1{
@@ -130,6 +140,15 @@ div.button-div{
   }
   div.button-div{
     width: 100%;
+  }
+  .brandlogo {
+    width: 10em;
+  }
+  .h3{
+    font-size: 18px;
+  }
+  .h4 {
+    font-size: 14px;
   }
 }
 
@@ -266,8 +285,6 @@ img.footerlogo{
   text-transform:uppercase;
   padding:5px;
   text-align:center;
-  margin-right:5px;
-  margin-left:5px;
 }
 
 .label-default.green{
@@ -283,10 +300,8 @@ img.footerlogo{
 }
 
 ul.list-group{
-  border:none;
-  list-style:none;
-  border-style:none;
-  background:transparent;
+  box-shadow: none;
+
 }
 
 li.list-group-item{
@@ -303,6 +318,7 @@ li.list-group-item.inline{
   font-weight:700;
   text-align:center;
   font-size:12px;
+  margin: 0 5px 5px 5px;
 }
 
 li.list-group-item.inline.green{
