Stock count UoM selection

--- a/app/views/stock-count/stock-count-form.html
+++ b/app/views/stock-count/stock-count-form.html
@@ -89,9 +89,18 @@
               <div class="row">
                 <div class="col-sm-12">
                   <h3 class="center-text">{{ facilityProducts[productKey].name }}</h3>
-                  <h3 class="center-text bold-text">
-                    <span ng-bind="productProfileUom.presentation.uom.symbol"></span><span ng-if="countValue[productKey] !== 1">s</span>
-                  </h3>
+                    <div class="center-text">
+                        <div class="form-group">
+                           <select class="form-control text-center-stock bold-text" ng-model="uomSelect" ng-change="updateUoM()">
+                               <option ng-if="productProfileUom.presentation.uom.symbol === 'vial'" selected="selected">doses</option>
+                               <option>{{productProfileUom.presentation.uom.symbol + 's'}}</option>
+                               
+                           </select>
+                            <br />
+                            <br />
+                        </div>
+                    </div>
+                  
                 </div>
                 <div class="row">
                   <div class="col-xs-12">
