--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -278,3 +278,12 @@ tr.disabled, tr.disabled span.text-info{
 .pb10{
   padding-bottom: 10px;
 }
+.text-center option{
+    text-align:center;
+}
+.text-center-stock{
+    text-align:center;
+    text-align-last:center;
+    font-size:1.8em;
+    height:2.2em;
+} 
