--- a/app/views/mobile app stock requisition/empty home.html
+++ b/app/views/mobile app stock requisition/empty home.html
@@ -76,6 +76,29 @@
       </table-->
     </div>
   </div>
+  
+  <!-- Footer -->
+  <div class="push"></div>
+  <div class="footer">
+    <div class="col-xs-3 text-center">
+      <a role="button" href="preview list.html">
+        <h6 class="text-uppercase dark-grey">
+        <i class="fa fa-shopping-cart fa-border icon left"></i>cart
+        </h6>
+      </a>
+    </div>
+    <div class="col-xs-4 text-center">
+      <a role="button" href="all invoices.html">
+        <h6 class="text-uppercase dark-grey">
+        <i class="fa fa-file-o fa-border icon left"></i> invoices
+        </h6>
+      </a>
+    </div>
+    <!-- <div class="col-xs-4 text-center">
+      <h6 class="text-uppercase dark-grey"><i class="fa fa-search fa-border icon left"></i> search </h6>
+    </div> -->
+  </div>
+
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 </body>
