--- a/app/views/mobile app stock requisition/all invoices.html
+++ b/app/views/mobile app stock requisition/all invoices.html
@@ -15,10 +15,10 @@
 <body>
 
 <!-- Header -->
-  <div class="container header bottom-aligner">
+  <div class="container header">
     <div class="row">
       <div class="col-xs-6">
-        <img src = "assets/img/logo-Stock-1.jpg" width = "100%">
+        <img src = "assets/img/logo-Stock-1.jpg" width = "75%">
       </div>
       <div class="col-xs-6">
         <h6 class="text-uppercase green text-right">
@@ -44,7 +44,9 @@
       </div>
     </div>
   </div>
-<div class="push"></div>
+
+<!-- <div class="push"></div> -->
+
   <!-- <div class="container">
     <a href="/new stock request" class="btn btn-default request-new">
       <i class="fa fa-plus icon"></i>Request New Stock
@@ -114,11 +116,20 @@
 <!-- Footer -->
 <div class="push"></div>
 <div class="footer">
-  <div class="col-xs-3 text-center">
-    <h6 class="text-uppercase dark-grey"><i class="fa fa-shopping-cart fa-border icon left"></i>cart</h6>
+  <div class="col-xs-6 text-center">
+    <a role="button" href="preview list.html">
+      <h6 class="text-uppercase dark-grey">
+      <i class="fa fa-shopping-cart fa-border icon left"></i>cart
+      </h6>
+    </a>
   </div>
-  <div class="col-xs-4 text-center">
-    <h6 class="text-uppercase dark-grey"><i class="fa fa-file-o fa-border icon left"></i> invoices </h6>
+  <div class="col-xs-6 text-center">
+    <a role="button" href="all invoices.html">
+      <h6 class="text-uppercase dark-grey">
+      <i class="fa fa-file-o fa-border icon left"></i>
+      <strong>invoices</strong>
+      </h6>
+    </a>
   </div>
   <!-- <div class="col-xs-4 text-center">
     <h6 class="text-uppercase dark-grey"><i class="fa fa-search fa-border icon left"></i> search </h6>
