--- a/app/views/mobile app stock requisition/home.html
+++ b/app/views/mobile app stock requisition/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="main">
 
 <head>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container header bottom-aligner">
+  <div class="container header">
     <div class="row">
       <div class="col-xs-6">
         <img src = "assets/img/logo-Stock-1.jpg" width = "100%">
@@ -42,15 +42,15 @@
   </div>
 
   <div class="container">
-    <a href="/new stock request" class="btn btn-default request-new">
+    <a role="button" href="new stock request II.html" class="btn request-new">
       <i class="fa fa-plus icon"></i>Request New Stock
     </a>
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-        <h5 class="text-center">Previous Stock Requisitions</h5>
+      <div class="col-xs-12 text-center">
+        <h5>Previous Stock Requisitions</h5>
       </div>
     </div>
   </div>
@@ -58,47 +58,65 @@
   <div class="container">
     <div class="table-responsive">
       <table class="table">
-        <thead>
+        <!-- <thead>
         <tr>
           <th class="dark-grey">DATE</th>
           <th class="dark-grey text-center">DELIVERED? </th>
           <th> </th>
         </tr>
-        </thead>
+        </thead> -->
         <tbody>
           <tr>
             <td><p><strong>28 May 2016</strong></p></td>
-            <td class="text-center"><i class="fa fa-close red"></i></td>
+            <td class="text-center">
+              <i class="fa fa-close red"></i>
+              <!-- <p class="text-uppercase red">not delivered</p> -->
+            </td>
             <td class="blue text-right"><p><strong>VIEW </strong><i class="fa fa-chevron-right icon"></i></p></td>
           </tr>
 
           <tr>
             <td><p><strong>01 Apr 2016</strong></p></td>
-            <td class="text-center"><i class="fa fa-check green"></i></td>
+            <td class="text-center">
+              <i class="fa fa-check green"></i>
+              <!-- <p class="text-uppercase green">delivered</p> -->
+            </td>
             <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
           </tr>
 
           <tr>
             <td><strong><p>16 Mar 2016</strong></p></td>
-            <td class="text-center"><i class="fa fa-check green"></i></td>
+            <td class="text-center">
+              <i class="fa fa-check green"></i>
+              <!-- <p class="text-uppercase green">delivered</p> -->
+            </td>
             <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
           </tr>
 
           <tr>
             <td><p><strong>22 Feb 2016</strong></p></td>
-            <td class="text-center"><i class="fa fa-check green"></i></td>
+            <td class="text-center">
+              <i class="fa fa-check green"></i>
+              <!-- <p class="text-uppercase green">delivered</p> -->
+            </td>
             <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
           </tr>
 
           <tr>
             <td><strong><p>09 Dec 2015</strong></p></td>
-            <td class="text-center"><i class="fa fa-close red"></i></td>
+            <td class="text-center">
+              <i class="fa fa-close red"></i>
+              <!-- <p class="text-uppercase red"> not delivered </p> -->
+            </td>
             <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
           </tr>
 
           <tr>
             <td><p><strong>17 Nov 2015</strong></p></td>
-            <td class="text-center"><i class="fa fa-check green"></i></td>
+            <td class="text-center">
+              <i class="fa fa-check green"></i>
+              <!-- <p class="text-uppercase green">delivered</p> -->
+            </td>
             <td class="blue text-right"><p><strong>VIEW</strong> <i class="fa fa-chevron-right icon"></i></p></td>
           </tr>
 
@@ -110,11 +128,19 @@
 <!-- Footer -->
 <div class="push"></div>
 <div class="footer">
-  <div class="col-xs-3 text-center">
-    <h6 class="text-uppercase dark-grey"><i class="fa fa-shopping-cart fa-border icon left"></i>cart</h6>
+  <div class="col-xs-6 text-center">
+    <a role="button" href="preview list.html">
+      <h6 class="text-uppercase dark-grey">
+      <i class="fa fa-shopping-cart fa-border icon left"></i>cart
+      </h6>
+    </a>
   </div>
-  <div class="col-xs-4 text-center">
-    <h6 class="text-uppercase dark-grey"><i class="fa fa-file-o fa-border icon left"></i> invoices </h6>
+  <div class="col-xs-6 text-center">
+    <a role="button" href="all invoices.html">
+      <h6 class="text-uppercase dark-grey">
+      <i class="fa fa-file-o fa-border icon left"></i> invoices
+      </h6>
+    </a>
   </div>
   <!-- <div class="col-xs-4 text-center">
     <h6 class="text-uppercase dark-grey"><i class="fa fa-search fa-border icon left"></i> search </h6>
@@ -125,6 +151,9 @@
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/js/angular.js"></script>
+<script src="assets/js/ui-bootstrap-tpls-2.0.0.js"></script>
+<script src="assets/js/angular.js"></script>
 </body>
 
 </html>
