--- a/app/views/mobile app stock requisition/invoice.html
+++ b/app/views/mobile app stock requisition/invoice.html
@@ -118,11 +118,19 @@
   <!-- Footer -->
   <div class="push"></div>
   <div class="footer">
-    <div class="col-xs-3 text-center">
-      <h6 class="text-uppercase dark-grey"><i class="fa fa-shopping-cart fa-border icon left"></i>cart</h6>
+    <div class="col-xs-6 text-center">
+      <a role="button" href="preview list.html">
+        <h6 class="text-uppercase dark-grey">
+        <i class="fa fa-shopping-cart fa-border icon left"></i>cart
+        </h6>
+      </a>
     </div>
-    <div class="col-xs-4 text-center">
-      <h6 class="text-uppercase dark-grey"><i class="fa fa-file-o fa-border icon left"></i> invoices </h6>
+    <div class="col-xs-6 text-center">
+      <a role="button" href="all invoices.html">
+        <h6 class="text-uppercase dark-grey">
+        <i class="fa fa-file-o fa-border icon left"></i>invoices
+        </h6>
+      </a>
     </div>
     <!-- <div class="col-xs-4 text-center">
       <h6 class="text-uppercase dark-grey"><i class="fa fa-search fa-border icon left"></i> search </h6>
