--- a/app/views/mobile app stock requisition/item added to list.html
+++ b/app/views/mobile app stock requisition/item added to list.html
@@ -37,14 +37,32 @@
       </div>
     </div>
 
-  <div class="container">
+<!-- Search -->
+  <!-- <div class="container">
     <div class="col-xs-12">
     <div class="search-bar text-center">
       <em><input type="text" name="search bar" placeholder="Type to search" autocomplete="on" class="text-center">
       <i class="fa fa-search icon dark-grey"></i></em>
     </div>
     </div>
-  </div>
+  </div> -->
+
+  <div class="container">
+  <!-- <div class="row"> -->
+    <div class="col-xs-12">
+      <div id="imaginary_container">
+        <div class="input-group item-search">
+          <input type="text" class="form-control"  placeholder="Search for a product" >
+          <span class="input-group-addon">
+            <button type="submit">
+              <span class="fa fa-search"></span>
+            </button>
+          </span>
+        </div>
+      </div>
+    </div>
+  <!-- </div> -->
+</div>
 
 <!--Category list-->
   <div class="container">
@@ -121,21 +139,39 @@
       <div class="col-xs-12 cat3 accordion">
         <h5 class="text-uppercase text-center"> category 3 </h5>
       </div>
+
+      <!--View cart-->
+        <div class="text-center text-uppercase">
+          <a class="btn btn-grey" type="button" href="preview list.html">
+            view cart (10)
+          </a>
+        </div>
     </div>
   </div>
+
+
 
   <!-- Footer -->
   <div class="push"></div>
   <div class="footer">
-    <div class="col-xs-3">
-      <h6 class="text-uppercase dark-grey"><i class="fa fa-shopping-cart fa-border icon left"></i>cart</h6>
+    <div class="col-xs-6 text-center">
+      <a role="button" href="preview list.html">
+        <h6 class="text-uppercase dark-grey">
+          <i class="fa fa-shopping-cart fa-border icon left"></i>
+          <strong>cart (10)</strong>
+        </h6>
+      </a>
     </div>
-    <div class="col-xs-4">
-      <h6 class="text-uppercase dark-grey"><i class="fa fa-file-o fa-border icon left"></i> invoices </h6>
+    <div class="col-xs-6 text-center">
+      <a role="button" href="all invoices.html">
+        <h6 class="text-uppercase dark-grey">
+        <i class="fa fa-file-o fa-border icon left"></i> invoices
+        </h6>
+      </a>
     </div>
-    <div class="col-xs-4">
+    <!-- <div class="col-xs-4">
       <h6 class="text-uppercase dark-grey"><i class="fa fa-search fa-border icon left"></i> search </h6>
-    </div>
+    </div> -->
   </div>
 
 
