--- a/app/views/mobile app stock requisition/view more.html
+++ b/app/views/mobile app stock requisition/view more.html
@@ -17,23 +17,18 @@
 
 
   <!--Header-->
-
-    <div class="container header bottom-aligner">
+    <div class="container header">
       <div class="row">
-      <div class="col-xs-6">
-        <img src = "assets/img/logo-Stock-1.jpg" width = "100%">
+      <div class="col-xs-8">
+        <h6 class="text-uppercase dark-grey">
+          <i class="fa fa-chevron-left icon"></i>home
+        </h6>
       </div>
 
-      <div class="col-xs-6 text-right">
-        <h6 class="text-uppercase green"><i class="fa fa-check icon"></i><strong>online </strong></h6>
+      <div class="col-xs-4 text-right">
+        <h6 class="text-uppercase green"><i class="fa fa-check icon"></i><strong> online </strong></h6>
       </div>
     </div>
-    </div>
-
-    <div class="container">
-      <p class="text-uppercase dark-grey backButton">
-        <i class="fa fa-chevron-left icon left"></i>back
-      </p>
     </div>
 
     <!--SubHeader-->
@@ -52,41 +47,61 @@
       <p class = "dark-grey"> 28 May 2016 </p>
     </div>
     <div class="col-xs-6 text-right">
-      <h6 class="text-uppercase dark-grey h6-subheader"><i class="fa fa-file-o icon"></i> <strong>view invoice </strong></h6>
+      <a href="invoice.html">
+        <h6 class="text-uppercase dark-grey h6-subheader">
+          <i class="fa fa-file-o icon"></i> <strong>view invoice </strong>
+        </h6>
+      </a>
     </div>
   </div>
 
     </div>
 
-    <div class="container status">
-      <span class="text-uppercase"> status: </span>
-      <span class="text-uppercase blue">
-        <i class="fa fa-spinner icon"></i>
-        <strong>awaiting payment</strong>
-      </span>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="status">
+          <p class="text-center">
+            <span class="text-uppercase"> status: </span>
+            <span class="text-uppercase blue">
+              <i class="fa fa-spinner icon"></i>
+              <strong>awaiting payment</strong>
+            </span>
+          </p>
+        </div>
     </div>
+    </div>
+  </div>
 
-    <div class="dropdown text-center blue">
-      <button class="btn request-new dropdown-toggle" data-toggle="dropdown" aria-expanded="false" type="button">Filter By
-        <span class="caret"></span>
-      </button>
-        <ul class="dropdown-menu" role="menu">
-          <li role="presentation"><a href="#">First Item</a></li>
-          <li role="presentation"><a href="#">Second Item</a></li>
-          <li role="presentation"><a href="#">Third Item</a></li>
-        </ul>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="input-group">
+            <input type="text" class="form-control" aria-label="..." placeholder="Type to search">
+              <div class="input-group-btn">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filter <span class="caret"></span></button>
+                  <ul class="dropdown-menu dropdown-menu-right">
+                    <li><a href="#">Category 1</a></li>
+                    <li><a href="#">Category 2</a></li>
+                    <li><a href="#">Category 3</a></li>
+                  </ul>
+              </div><!-- /btn-group -->
+          </div><!-- /input-group -->
+        </div><!-- /.col-lg-6 -->
+      </div><!-- /.row -->
     </div>
 
     <!--Products Requested-->
     <div class="container">
       <div class="table-responsive">
         <table class="table">
-          <thead>
+          <!-- <thead>
             <tr>
               <th class="dark-grey">PRODUCT </th>
               <th class="dark-grey text-right">COST(N)</th>
             </tr>
-          </thead>
+          </thead> -->
 
           <tbody>
             <tr class="category-row cat1">
@@ -95,7 +110,7 @@
                 <p>Product Name</p>
               </td>
               <td class="product-column text-right">
-                <p>3,700 </p>
+                <p>N3,700 </p>
               </td>
             </tr>
 
@@ -105,7 +120,7 @@
                 <p>Product Name</p>
               </td>
               <td class="product-column text-right">
-                <p>450,000 </p>
+                <p>N450,000 </p>
               </td>
             </tr>
 
@@ -115,7 +130,7 @@
                 <p>Long Product Name That Goes on Forever</p>
               </td>
               <td class="product-column text-right">
-                <p>450,000 </p>
+                <p>N450,000 </p>
               </td>
             </tr>
 
@@ -124,7 +139,7 @@
                 <p><strong>TOTAL </strong></p>
               </td>
               <td class="product-column text-right">
-                <p><strong>903,700 </strong></p>
+                <p><strong>N903,700 </strong></p>
               </td>
             </tr>
           </tbody>
@@ -134,21 +149,22 @@
 
     <!--Restock Alert Requests-->
     <div class="container">
-      <h5 class="text-uppercase dark-grey">restock alert requests</h5>
+      <h6 class="category-row text-uppercase dark-grey">restock alert requests</h6>
       <div class="table-responsive">
         <table class="table">
           <thead>
-            <tr></tr>
+            <tr>
+            </tr>
           </thead>
 
           <tbody>
             <tr>
-              <td>Product Name</td>
+              <td><p>Product Name</p></td>
               <td class="text-right green"><p><strong>ALERT SENT </strong></p></td>
             </tr>
 
             <tr>
-              <td>Longer Product Name</td>
+              <td><p>Longer Product Name<p></td>
               <td class="text-right orange"><p><strong>ALERT PENDING </strong></p></td>
             </tr>
           </tbody>
@@ -159,11 +175,19 @@
     <!-- Footer -->
     <div class="push"></div>
     <div class="footer">
-      <div class="col-xs-3 text-center">
-        <h6 class="text-uppercase dark-grey"><i class="fa fa-shopping-cart fa-border icon left"></i>cart</h6>
+      <div class="col-xs-6 text-center">
+        <a role="button" href="preview list.html">
+          <h6 class="text-uppercase dark-grey">
+          <i class="fa fa-shopping-cart fa-border icon left"></i>cart
+          </h6>
+        </a>
       </div>
-      <div class="col-xs-4 text-center">
-        <h6 class="text-uppercase dark-grey"><i class="fa fa-file-o fa-border icon left"></i> invoices </h6>
+      <div class="col-xs-6 text-center">
+        <a role="button" href="all invoices.html">
+          <h6 class="text-uppercase dark-grey">
+          <i class="fa fa-file-o fa-border icon left"></i> invoices
+          </h6>
+        </a>
       </div>
       <!-- <div class="col-xs-4 text-center">
         <h6 class="text-uppercase dark-grey"><i class="fa fa-search fa-border icon left"></i> search </h6>
